media/bazarr/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
    version: v1
spec:
  serviceName: bazarr
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
      version: v1
  template:
    metadata:
      labels:
        app: bazarr
        rclone-mounts: "true"
        version: v1
    spec:
      serviceAccountName: bazarr

      dnsConfig:
        options:
          - name: ndots
            value: "1"

      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - pms
              topologyKey: "kubernetes.io/hostname"

      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.2.4
          # image: alpine
          # command: ["sleep"]
          # args: ["infinity"]

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              memory: "1Gi"

          ports:
            - name: http
              containerPort: 6767

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - test -f /media/.anchors/dropbox
            periodSeconds: 10
            failureThreshold: 3

          startupProbe:
            httpGet:
              port: http
              path: /
            periodSeconds: 10
            failureThreshold: 30

          volumeMounts:
            - name: bazarr
              subPath: config
              mountPath: /config
            - name: media-rclone
              mountPath: /media
      volumes:
        - name: bazarr
          persistentVolumeClaim:
            claimName: bazarr-iscsi-pvc-ssd
        - name: media-rclone
          hostPath:
            path: /mnt/media-rclone
            type: Directory
