media/bazarr/networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bazarr
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: bazarr
  ingress:
  - ports:
    - port: http
    from: []
